# PyMEOS

./: .gitignore  .readthedocs.yaml  Pipfile  README.md  build_helpers.py  build_pymeos.py  build_pymeos_functions.py  build_pymeos_functions_modifiers.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  build_pymeos_cffi.yml  release_and_publish.yml  test-develop.yml  test-master.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/pymeos/: index.rst  pymeos.collections.rst
docs/pymeos_cffi/: index.rst
docs/src/: examples  examples.rst  installation.rst  manual.rst
examples/: MovingPandas - PyMEOS - AIS.ipynb  convert_test.py  convert_test_1.py  meos_process_ais.c  pymeos_clip_berlinmod.py  pymeos_hello_world.py  pymeos_process_ais.py  pymeos_read_ais.py  pymeos_read_ais_new.py  pymeos_store_ais.py  tbool_out.txt  test_meos.py  tpoint.txt
lib/: functions.py  objects.py
pymeos/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.pypi.md  __init__.py  dev-requirements.txt  errors.py  factory.py  meos_init.py  pyproject.toml  test_meos.py  utils.py
pymeos/aggregators/: __init__.py  aggregator.py  bool_aggregators.py  point_aggregators.py
pymeos/boxes/: __init__.py  stbox.py  tbox.py
pymeos/collections/base/: set.py  spanset.py
pymeos/collections/geo/: geoset.py
pymeos/collections/number/: floatset.py  floatspan.py  floatspanset.py  intset.py  intspan.py  intspanset.py
pymeos/collections/text/: __init__.py  textset.py
pymeos/collections/time/: dateset.py  datespan.py  datespanset.py  tstzset.py  tstzspan.py  tstzspanset.py
pymeos/db/: psycopg2.py
pymeos/docs/: conf.py  index.rst  pymeos.boxes.rst  pymeos.main.rst  pymeos.plotters.rst  pymeos.rst  pymeos.time.rst
pymeos/examples/: box_psycopg.py  tbool.py  tfloat.py  tgeogpoint.py  tgeogpoint_psycopg.py  tgeompoint_psycopg.py  time.py  time_asyncpg.py  time_psycopg.py  tint.py  tint_asyncpg.py  tint_psycopg.py  ttext.py  ttext_psycopg.py
pymeos/main/: tbool.py  tfloat.py  tint.py  tnumber.py  tpoint.py  ttext.py
pymeos/mixins/: __init__.py  comparison.py  simplify.py
pymeos/plotters/: box_plotter.py  point_sequence_plotter.py  point_sequenceset_plotter.py  range_plotter.py  time_plotter.py
pymeos/pymeos/: __init__.py  db.py  factory.py  meos_function_list.md  meos_init.py  utils.py
pymeos/pymeos/aggregators/: __init__.py  aggregator.py  bool_aggregators.py  general_aggregators.py  number_aggregators.py  point_aggregators.py  text_aggregators.py  time_aggregators.py
pymeos/pymeos/boxes/: __init__.py  box.py  stbox.py  tbox.py
pymeos/pymeos/collections/: __init__.py
pymeos/pymeos/collections/base/: __init__.py  collection.py  set.py  span.py  spanset.py
pymeos/pymeos/collections/geo/: __init__.py  geoset.py
pymeos/pymeos/collections/number/: __init__.py  floatset.py  floatspan.py  floatspanset.py  intset.py  intspan.py  intspanset.py
pymeos/pymeos/collections/text/: __init__.py  textset.py
pymeos/pymeos/collections/time/: __init__.py  dateset.py  datespan.py  datespanset.py  period.py  periodset.py  time.py  time_collection.py  timecollection.py  timestampset.py  tstzcollection.py  tstzset.py  tstzspan.py  tstzspanset.py
pymeos/pymeos/db/: asyncpg.py  db_objects.py  psycopg.py  psycopg2.py
pymeos/pymeos/examples/: box.py  box_psycopg.py  db_connect.py  tbool.py  tfloat.py  tfloat_asyncpg.py  tfloat_psycopg.py  tgeogpoint.py  tgeogpoint_asyncpg.py  tgeompoint.py  tgeompoint_asyncpg.py  time.py  tint.py  ttext.py  ttext_asyncpg.py
pymeos/pymeos/main/: __init__.py  tbool.py  tfloat.py  tint.py  tnumber.py  tpoint.py  ttext.py
pymeos/pymeos/mixins/: __init__.py  comparison.py  simplify.py  temporal_comparison.py
pymeos/pymeos/old_time/: periodset.py  timestampset.py
pymeos/pymeos/plotters/: __init__.py  box_plotter.py  point_sequence_plotter.py  point_sequenceset_plotter.py  range_plotter.py  sequence_plotter.py  sequenceset_plotter.py  time_plotter.py
pymeos/pymeos/temporal/: __init__.py  interpolation.py  temporal.py  temporalinstants.py  tinstant.py  tinstantset.py  tsequence.py  tsequenceset.py
pymeos/pymeos/time/: __init__.py  period.py  periodset.py  time.py  timestamp.py  timestampset.py
pymeos/temporal/: temporal.py  temporalinstants.py  tinstant.py  tinstantset.py  tsequence.py  tsequenceset.py
pymeos/tests/: conftest.py
pymeos/tests/boxes/: stbox_test.py  tbox_test.py
pymeos/tests/collections/number/: floatset_test.py  intset_test.py  intspan_test.py
pymeos/tests/collections/text/: textset_test.py
pymeos/tests/collections/time/: dateset_test.py  period_test.py  periodset_test.py  timestampset_test.py  tstzset_test.py  tstzspan_test.py  tstzspanset_test.py
pymeos/tests/main/: tbool_test.py  tfloat_test.py  tgeogpoint_test.py  tgeompoint_test.py  tint_test.py  ttext_test.py
pymeos/tests/main/tbool/: tbool_instant_test.py  tbool_test.py
pymeos/tests/temporal/: interpolation_test.py  tinstant_test.py
pymeos/tests/time/: period_test.py  periodset_test.py  timestampset_test.py
pymeos/time/: period.py  periodset.py  timestampset.py
pymeos_cffi/: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  dev-requirements.txt  functions.py  pyproject.toml  setup.py  test.py
pymeos_cffi/docker/: Dockerfile  MEOS.Dockerfile  MobilityDB.Dockerfile  build_wheels.sh  liblwgeom.h  meos_mod.h  postgres.h
pymeos_cffi/pymeos_cffi/: __init__.py  enums.py  errors.py  functions.py  objects.py
pymeos_cffi/pymeos_cffi/builder/: build_header.py  build_helpers.py  build_pymeos.py  build_pymeos_functions.py  build_pymeos_functions_modifiers.py  meos.h  objects.py
pymeos_cffi/pymeos_cffi/builder/templates/: functions.py  init.py
pymeos_examples/: Pipfile  README.md
pymeos_examples/MovingPandas/: 7-generalizing-trajectories.ipynb  MovingPandas - PyMEOS - AIS.ipynb  MovingPandas - PyMEOS - Generalization.ipynb
pymeos_examples/PyMEOS Examples/: AIS.ipynb  pymeos_assemble_ais.py  pymeos_clip_berlinmod.py  (+6 more)
sources/: functions.c  types.c
src/: functions.py  objects.py
(+63 files in other folders)
