[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pymeos'
dynamic = ['version']
authors = [
    { name = 'Victor Divi', email = 'vdiviloper@gmail.com' },
    { name = 'Zhicheng Luo', email = 'zhicheng.luo@ulb.be' },
    { name = 'Krishna Chaitanya Bommakanti', email = 'bkchaitan94@gmail.com' },
]
description = 'Python wrapper for the MEOS C Library.'
classifiers = [
    'License :: OSI Approved :: PostgreSQL License',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Operating System :: POSIX',
    'Operating System :: Unix'
]
readme = 'README.md'
license = { file = 'LICENSE' }

requires-python = '>=3.8'
dependencies = [
    'pymeos-cffi >=1.1.0, <2',
    'python-dateutil',
    'shapely',
]

[project.optional-dependencies]
dbp = [
    'psycopg'
]

dbp2 = [
    'psycopg2'
]

dba = [
    'asyncpg'
]

plot = [
    'matplotlib'
]

pandas = [
    'geopandas'
]

[project.urls]
'Homepage' = 'https://github.com/MobilityDB/PyMEOS/pymeos'
'Bug Tracker' = 'https://github.com/MobilityDB/PyMEOS/issues'
'Changelog' = 'https://github.com/MobilityDB/PyMEOS/blob/master/pymeos/CHANGELOG.md'

[tool.setuptools.dynamic]
version = { attr = "pymeos.__version__" }