[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pymeos_cffi"
version = "0.0.18"
authors = [
    { name = "Víctor Diví", email = "vdiviloper@gmail.com" },
]
description = "PyMEOS wrapper for the MEOS C Library."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.7"
dependencies = [
    'cffi',
    'python-dateutil',
    'spans',
    'postgis',
    'shapely'
]

[project.urls]
"Homepage" = "https://github.com/MobilityDB/PyMEOS"
"Bug Tracker" = "https://github.com/MobilityDB/PyMEOS/issues"