[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
py-modules = []

[project]
name = 'pymeos_cffi'
version = '1.1.0-alpha.1'
authors = [
    { name = 'Victor Divi', email = 'vdiviloper@gmail.com' }
]
description = 'PyMEOS wrapper for the MEOS C Library.'
classifiers = [
    'License :: OSI Approved :: PostgreSQL License',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Operating System :: POSIX',
    'Operating System :: Unix'
]
readme = 'README.md'
license = { file = 'LICENSE' }

requires-python = '>=3.7'
dependencies = [
    'cffi',
    'python-dateutil',
    'spans',
    'postgis',
    'shapely'
]

[project.urls]
'Homepage' = 'https://github.com/MobilityDB/PyMEOS'
'Bug Tracker' = 'https://github.com/MobilityDB/PyMEOS/issues'